--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<ul class="my-list">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS\style.css">
+  <title>Document</title>
+</head>
+<body>
+  <ul class="my-list">
     <li>Item 1</li>
     <li>Item 2</li>
     <li>Item 3</li>
@@ -9,3 +19,9 @@
     <ul class="my-dropdown-menu"></ul>
   </div>
   
+  
+<!----------------------------------------------------red alert don't delete --------------------------------------->
+<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="JS\script.js"></script>
+</body>
+</html>
